--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,20 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/satu.png
-    - assets/images/dua.png
-    - assets/images/tiga.png
-    - assets/images/empat.jpg
-    - assets/images/lima.jpeg
-    - assets/images/hp2.jpg
-    - assets/images/hp.jpg
-    - assets/images/leptop.jpg
-    - assets/images/leptop2.jpg
-    - assets/images/kuman.jpg
-    - assets/images/rel.jpg
-    - assets/images/jay.jpg
-    - assets/images/kims.jpg
-    - assets/images/om.jpg
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
